--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-express",
+  "name": "cloud-camera",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -8,8 +8,7 @@
     "preview": "vite preview --port 5000",
     "build": "vite build",
     "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "check": "tsc"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.775.0",
