--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.4.0",
+    "react-photo-view": "^1.2.7",
     "react-resizable-panels": "^2.1.4",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
